--- a/gifnjam/src/App.css
+++ b/gifnjam/src/App.css
@@ -1,17 +1,5 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+nav.nav.gifnjam {
+  background: rgba(79, 69, 139, 0.9);
 }
 
 .App-intro {
